# longeval-2025

./: .env  .env.template  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.def  docker-compose.yml  pom.xml  pyproject.toml  requirements.txt
config/: openai_query_expansion.yml
docs/: apptainer.md  opensearch-snapshot-setup.md  overview.md  process.md  token-stats.md  why-opensearch.md
docs/opensearch/: opensearch-reranking.md  opensearch-snapshot-setup.md
jvm/: build.sh
longeval/: cli.py  collection.py  evaluation.py  luigi.py  settings.py  spark.py
longeval/etl/: __init__.py
longeval/opensearch/: __init__.py  admin.py  snapshot.py
notebooks/eda/: 00-dev-dataset.ipynb  00-load-datasets.ipynb  00-opensearch-load.ipynb  01-insert-opensearch.ipynb  02-token-counts.ipynb  03-test-queries.ipynb  04-nvidia-logs.ipynb  05-lda-topic-exploration.ipynb  06-collection-2025.ipynb  07-collection-2025-parquet.ipynb  08-collection-2025-parquet-full.ipynb
notebooks/modeling/: 00-bm25.ipynb  01-bm25-full.ipynb  02-bm25-lag-scores.ipynb  03-pyserini-test.ipynb  04-pyserini-v2.ipynb  05-bm25-evaluation.ipynb  06-bm25-query-results.ipynb  07-last-stretch-bm25-query-results.ipynb  08-query-expansion.ipynb  09-query-expansion-validate.ipynb
notebooks/results/: 01-bm25.ipynb  02-all.ipynb
sbatch/: configure-apptainer.sbatch  download-longeval.sbatch  etl-irds-parquet.sbatch  etl-parquet.sbatch  etl-web2025-parquet.sbatch  evaluation-results.sbatch  experiment-bm25-expanded.sbatch  experiment-bm25.sbatch  experiment-evaluate.sbatch  experiment-rerank-expansion-full.sbatch  experiment-rerank-expansion.sbatch  experiment-rerank-extras.sbatch  experiment-rerank-smoke.sbatch  experiment-rerank.sbatch  lda-test.sbatch  nmf-test.sbatch  slurm-embed-large.sbatch  sync-scratch.sbatch
scripts/: activate  activate-gcp-vm  aggregate-rerank-results.py  docker-compose-gcp  download-longeval  inspect-irds-layout.py  integration-data  lda-infer-queries.py  nvidia-logs  prototype-lda  query-drift.py  query-stats.py  rerank-eval.py  retrieved-dist.py  salloc-cpu  salloc-gpu  slurm-embed  slurm-embed.py  slurm-embed.sbatch  slurm-test  slurm-test.sbatch  slurm-test.sh  spark-jars.sh  start-apptainer.sh  sweep-expansion-rescore.py  sweep-logs  sweep-logs.sh  topic-rerank-bm25.py  topic-signal-probe-harden.py  topic-signal-probe.py  validate-bm25-full.py  validate-bm25-single-date.py  validate-rerank-single-date.py
scripts/sbatch/: slurm-embed-large.sbatch  slurm-embed.sbatch  slurm-test.sbatch
scripts/utils/: slurm-venv.sh
tests/: conftest.py  test_etl_embedding_ml.py  test_etl_embedding_workflow.py
tests/embedding_tests/: test_etl_embedding_ml.py  test_etl_embedding_workflow.py
tests/lda_tests/: test_convprobe.py  test_etl_lda_coherence.py  test_heldout.py  test_lucene_fr_udf.py  test_workflow_sweep.py
tests/opensearch_tests/: test_opensearch_healthcheck.py
user/acmiyaguchi/: 20260518-lda-k-selection.md  20260519-lda-k4-worklog.md  20260519-lda-k4xk20-attribution.md  20260522-bm25-baseline-repro.md  20260522-query-drift.md  20260522-query-expansion-rescore.md  20260522-query-stats-and-lda.md  20260522-retrieved-distribution.md  20260522-topic-signal-probe.md  20260523-reranker-model-comparison.md  20260527-reranker-eval-issue37.md  README.md  experiment-bm25.sbatch  issue37-manifest.json  issue37-results-expanded-full.md  issue37-results-expanded.csv  issue37-results.csv  issue37-results.md  slurm-embed.sbatch  (+2 more)
(+89 files in other folders)
