[project]
name = "longeval"
version = "0.1.1"
authors = [{ name = "Anthony Miyaguchi", email = "acmiyaguchi@gatech.edu" }]
description = "DS@GT LongEval helper package"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/dsgt-kaggle-clef/longeval-2025"
Issues = "https://github.com/dsgt-kaggle-clef/longeval-2025/issues"

[project.scripts]
longeval = "longeval.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["longeval*"]
namespaces = false

[tool.uv]
cache-dir = "~/scratch/uv-cache"
