[project]
name = "longeval"
version = "0.1.1"
authors = [{ name = "Anthony Miyaguchi", email = "acmiyaguchi@gatech.edu" }, {name = "Imran Afrulbasha", email = "iafrulbasha3@gatech.edu" }]
description = "DS@GT LongEval helper package"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>1.24.4",
    "pandas",
    "matplotlib",
    "tqdm",
    "unidecode",
    "pyspark[sql]>=3.5.0",
    "scikit-learn",
    "luigi",
    "google-api-python-client",
    "google-auth",
    "google-cloud-storage",
    "opensearch-py",
    "tiktoken",
    "typer",
    "contexttimer",
    "sentence-transformers",
    "gdown",
    "pytrec_eval",
    "numba",
    "umap-learn",
    "pyserini>=0.22.1",
    "rerankers",
    "python-box"
]

[project.optional-dependencies]
dev = [
    "pip",
    "jupyterlab",
    "ruff",
    "pre-commit",
    "pytest",
    "pace-job-monitoring@git+https://github.com/dsgt-kaggle-clef/pace-job-monitoring.git#main"
]

[project.urls]
Homepage = "https://github.com/dsgt-kaggle-clef/longeval-2025"
Issues = "https://github.com/dsgt-kaggle-clef/longeval-2025/issues"

[project.scripts]
longeval = "longeval.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["longeval*"]
namespaces = false

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.6",
    "pip>=25.0.1",
    "pre-commit>=4.1.0",
]
